fix spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -488,6 +488,9 @@ body{
   text-align: center;
 }
 
+.happening{
+  margin-right: 10px;
+}
 
 
 
